--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 	<link rel="stylesheet" href="{{path}}" type="text/css" />
 	% end
 	
-	<script src="js/script.js" type="text/javascript"></script>
 	<script src="js/moment-with-locales.min.js" type="text/javascript"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.0/jquery.min.js" type="text/javascript"></script>
 	% for path in assets['js']:
@@ -31,11 +30,8 @@
 				<div class="sub container">
 					{{!weather}}
 				</div>
-				<div class="sub container stib">
-					<header class="item title2">Transport en Commun</header>
-					<div class="item station" id="metro1"></div>
-					<div class="item station" id="metro2"></div>
-					<div class="item station" id="metro3"></div>
+				<div class="sub container">
+					{{!transport}}
 				</div>
 			</section>
 			<section class="container infos">
