Modules: Add a warning module

--- a/index.html
+++ b/index.html
@@ -81,11 +81,7 @@
 					</div>
 				</div>
 				<div class="sub banner">
-				% for element in event:
-				%     if event[element]['type'] == 'D' :
-					<div class="message">{{!event[element]['description']}}</div>
-				%     end
-				% end
+				{{!warning}}
 				</div>
 			</section>
 			<section class="container menu">
