Modules: Add a logo module

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				</div>
 			</section>
 			<section class="container menu">
-				<nav class="sub"><a href=""><img class="logo" src="images/logoecam.png"></a></nav>
+				<nav class="sub">{{!logo}}</nav>
 				<nav class="sub"><a href="underconstruction"><img class="link" src="images/myway.png"><div class="menutitle">My Way</div></a></nav>
 				<nav class="sub"><a href="info"><img class="link" src="images/info.png"><div class="menutitle">Infos</div</a></nav>
 				<nav class="sub"><a href="planning"><img class="link" src="images/horaire.png"><div class="menutitle">Horaires</div</a></nav>
