--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
 	<meta charset="utf-8" />
 	
 	<link rel="stylesheet" href="css/style.css" type="text/css" />
-	<link rel="stylesheet" href="css/info.css" type="text/css" />
-	<link rel="stylesheet" href="css/metro.css" type="text/css" />
 	% for path in assets['css']:
 	<link rel="stylesheet" href="{{path}}" type="text/css" />
 	% end
 	
 	<script src="js/moment-with-locales.min.js" type="text/javascript"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.0/jquery.min.js" type="text/javascript"></script>
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js" type="text/javascript"></script>
 	% for path in assets['js']:
 	<script src="{{path}}" type="text/javascript"></script>
 	% end
