--- a/index.html
+++ b/index.html
@@ -12,82 +12,25 @@
 	% end
 	
 	<script src="js/moment-with-locales.min.js" type="text/javascript"></script>
-	<script src="https://code.jquery.com/jquery-2.2.4.min.js" type="text/javascript"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.0/jquery.min.js" type="text/javascript"></script>
 	% for path in assets['js']:
 	<script src="{{path}}" type="text/javascript"></script>
 	% end
 </head>
 
 <body>
-	<div class="page">
-		<div class="block">
-			<section class="container service">
-				<div class="sub container">
-					{{!datetime}}
-				</div>
-				<div class="sub container">
-					{{!weather}}
-				</div>
-				<div class="sub container">
-					{{!transport}}
-				</div>
-			</section>
-			<section class="container infos">
-				<style>
-				% n=len(event)
-				% a=5
-				% b=2
-				% t=(a+b)*n
-				% one=(a/t)*100
-				% two=((a+b)/t)*100
-				% three=100-((b/t)*100)
-				@-webkit-keyframes crossfade
-				{
-					0% {opacity:1;}
-					{{one}}% {opacity:1;}
-					{{two}}% {opacity:0;}
-					{{three}}% {opacity:0;}
-					100% {opacity:1;}
-				}
-				figure{-webkit-animation:crossfade {{t}}s infinite;}
-				% for i in range(len(event)):
-				figure:nth-of-type({{i+1}}){-webkit-animation-delay:{{t-(i*(a+b))}}s;}
-				% end
-				</style>
-				<div class="sub info">
-					<div class="slider">
-					% for element in event:
-					%     if event[element]['type'] == 'E':
-						<figure id="slide-{{i}}">
-							<div class="slideitem title"><h1>{{event[element]['titre']}}</h1></div>
-							<div class="slideitem content" id="eventdesc">{{!event[element]['description']}}</div>
-						</figure>
-					%     end
-					%     if event[element]['type'] == 'H':
-						<figure id="slide-{{i}}">
-							<div class="slideitem title"><h1>{{event[element]['objet']}}</h1>/div>
-							<div class="slideitem content">{{!event[element]['description']}}</div>
-						</figure>
-					%     end
-					%     if event[element]['type'] == 'D':
-						<figure id="slide-{{i}}">
-							<div class="slideitem title"><h1>{{event[element]['objet']}}</h1></div>
-							<div class="slideitem content">{{!event[element]['description']}}</div>
-						</figure>
-					%     end
-					% end
-					</div>
-				</div>
-				<div class="sub banner">
-				{{!warning}}
-				</div>
-			</section>
-			<section class="container menu">
-				<nav class="sub">{{!logo}}</nav>
-				<nav class="sub"><a href="underconstruction"><img class="link" src="images/myway.png"><div class="menutitle">My Way</div></a></nav>
-				<nav class="sub"><a href="info"><img class="link" src="images/info.png"><div class="menutitle">Infos</div</a></nav>
-				<nav class="sub"><a href="planning"><img class="link" src="images/horaire.png"><div class="menutitle">Horaires</div</a></nav>
-			</section>
+	<div id="screen">
+		<div id="right">
+			<div>{{!logo}}</div>
+		</div>
+		<div id="left">
+			<div>{{!datetime}}</div>
+			<div>{{!weather}}</div>
+			<div>{{!transport}}</div>
+		</div>
+		<div id="main">
+			<div>Infos</div>
+			<div>Warnings</div>
 		</div>
 	</div>
 </body>
