Modules: Add a filler module

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	% end
 	
 	<script src="js/moment-with-locales.min.js" type="text/javascript"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.0/jquery.min.js" type="text/javascript"></script>
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js" type="text/javascript"></script>
 	% for path in assets['js']:
 	<script src="{{path}}" type="text/javascript"></script>
 	% end
@@ -27,6 +27,7 @@
 			<div>{{!datetime}}</div>
 			<div>{{!weather}}</div>
 			<div>{{!transport}}</div>
+			<div>{{!leftfiller}}</div>
 		</div>
 		<div id="main">
 			<div>Infos</div>
