--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div>{{!widgets['datetime']()}}</div>
 			<div>{{!widgets['weather']()}}</div>
 			<div>{{!widgets['transport']()}}</div>
-			<div>{{!widgets['filler']()}}</div>
+			<div>{{!widgets['leftfiller']()}}</div>
 		</div>
 		<div id="main">
 			<div>Infos</div>
