Modules: Add an info module

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div>{{!widgets['leftfiller']()}}</div>
 		</div>
 		<div id="main">
-			<div>Infos</div>
+			<div>{{!widgets['info']()}}</div>
 			<div>{{!widgets['warning']()}}</div>
 		</div>
 	</div>
