Add a filler widget in the right column

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<div id="screen">
 		<div id="right">
 			<div>{{!widgets['logo']()}}</div>
+			<div>{{!widgets['rightfiller']()}}</div>
 		</div>
 		<div id="left">
 			<div>{{!widgets['datetime']()}}</div>
