Server: Add WebSocket support to update screen

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	% for path in assets['js']:
 	<script src="{{path}}" type="text/javascript"></script>
 	% end
+	<script src="js/ecam-tv.min.js" type="text/javascript"></script>
 </head>
 
 <body>
