Server: Add possibility to configure host and port for the websocket update server

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	<link rel="stylesheet" href="{{path}}" type="text/css" />
 	% end
 	
+	<script type="text/javascript">
+		{{!jsconf}}
+	</script>
 	<script src="js/moment-with-locales.min.js" type="text/javascript"></script>
 	<script src="js/jquery-2.2.4.min.js" type="text/javascript"></script>
 	% for path in assets['js']:
